# launcher2

./: package-lock.json
.github/workflows/: build.yml  rust.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/modules/: admin.rs  process.rs
